[package]
name = "distances"
version = "0.1.0"
authors = ["Aaron Lux <lux.r.ck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "distances"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.2"
pyo3 = {version = "0.8.0", optional = true, features = ["extension-module"]}

[features]
default = []
python = ["pyo3"]